--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -3,6 +3,7 @@ super_admin:
   email: "super-admin@example.com"
   role_id: <%= Role::SUPER_ADMIN.id %>
   token: abc123
+  last_login_at: <%= 1.day.ago.to_s(:db) %>
 
 admin:
   name: "Admin"
@@ -10,39 +11,46 @@ admin:
   role_id: <%= Role::ADMIN.id %>
   token: abc123
   external_id: 'google-1'
+  last_login_at: <%= 1.day.ago.to_s(:db) %>
 
 deployer:
   name: "Deployer"
   email: "deployer@example.com"
   role_id: <%= Role::DEPLOYER.id %>
   external_id: 'google-2'
+  last_login_at: <%= 1.day.ago.to_s(:db) %>
 
 deployer_buddy:
   name: "DeployerBuddy"
   email: "deployerbuddy@example.com"
   role_id: <%= Role::DEPLOYER.id %>
   external_id: 'google-21'
+  last_login_at: <%= 1.day.ago.to_s(:db) %>
 
 viewer:
   name: "Viewer"
   email: "viewer@example.com"
   role_id: <%= Role::VIEWER.id %>
   external_id: 'google-3'
+  last_login_at: <%= 1.day.ago.to_s(:db) %>
 
 github_viewer:
   name: "GitHub Viewer"
   email: "gh+viewer@example.com"
   role_id: <%= Role::VIEWER.id %>
   external_id: 'github-3'
+  last_login_at: <%= 1.day.ago.to_s(:db) %>
 
 project_admin:
   name: "Deployer Project Admin"
   email: "deployer_admin@example.com"
   role_id: <%= Role::DEPLOYER.id %>
   external_id: 'github-4'
+  last_login_at: <%= 1.day.ago.to_s(:db) %>
 
 project_deployer:
   name: "Project Deployer"
   email: "viewer_deployer@example.com"
   role_id: <%= Role::VIEWER.id %>
   external_id: 'github-5'
+  last_login_at: <%= 1.day.ago.to_s(:db) %>
