expire sessions after certain time
default rails session expire_after refreshes when used, so not useful to us
this will also add visbility into how samson is used

Initially all users will be logged out, so we get reliable data and do not
keep old users logged in forever.

--- a/.env.example
+++ b/.env.example
@@ -54,6 +54,8 @@ GITHUB_TOKEN=
 
 # FORCE_SSL=1 # optional, to require SSL
 
+# SESSION_EXPIRATION=3600 # optional, after how much time (seconds) to expire sessions, default: 1 month
+
 # ENV_WHITELIST=FOOBAR,BARFOO # optional, list of env values that should be passed to the command when deploying
 
 ## Docker
