--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -3,6 +3,7 @@ super_admin:
   email: "super-admin@example.com"
   role_id: <%= Role::SUPER_ADMIN.id %>
   token: abc123
+  external_id: 'github-super_admin'
 
 admin:
   name: "Admin"
